4.23.4:

-Bug fix for loading stale / removed price charts ('loading charts' now disappears properly)

-"Show Secondary Trade / Holdings Value" feature on Settings page

-Bending the knee to "The Great Privacy Purge" (removed privacy coins in asset examples)

-Resources page / new feeds cleanup

-Misc fixes / UX

-------------------------------------------------------------------



-------------------------------------------------------------------
4.23.5:

-Bug fix for fiat-based conversion price charts

-Bug fix for zingchart branding link

-Misc UX

-------------------------------------------------------------------



-------------------------------------------------------------------
4.23.6:

-Bug fix for "Crypto Value" altcoin values

-Misc fixes / UX

-------------------------------------------------------------------



-------------------------------------------------------------------
4.23.7:

-Bug fix for large crypto value support in 'Secondary Trade / Holdings Values' feature

-Bug fix for random colors in 'More Stats' charts not being auto-adjusted minimum range differences (too close to same colors, for items list size)

-'More Stats' (bottom of portfolio page) now only shows user-selected assets by default

-Revised default config

-Misc UX

-------------------------------------------------------------------



-------------------------------------------------------------------
4.24.0:

-Newer news feed articles now marked as 'new', with days threshold adjustable in power config section

-Improved / fine-tuned random color generation for multi-item charts

-Revised default config

-Code cleanup

-Misc UX

-------------------------------------------------------------------



-------------------------------------------------------------------
4.24.1:

-Bug fixes / UX for auto-install script

-Misc UX

-------------------------------------------------------------------





















